Added status sign and colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
    <div class="page">
-      <h1>Hello World</h1>
+      <div class="status">
+         <span class="icon-restroomsign sign" id="jsStatus"></span>
+         <h1>Hello World</h1>
+      </div>
    </div>
 </body>
 </html>
