Added status labels and colors

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 </head>
 <body>
    <div class="page">
-      <div class="status">
-         <span class="icon-restroomsign sign" id="jsStatus"></span>
-         <h1>Hello World</h1>
+      <div class="status" id="jsStatus">
+         <span class="icon-restroomsign sign"></span>
+         <div class="banner">
+            <h1 id="jsMessage">Unknown</h1>
+            <p>Last change: <span id="jsUpdate">unknown</span></p>
+            <p>Last checked: <span id="jsPing">unknown</span></p>
+         </div>
       </div>
    </div>
 </body>
