Added favicon images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
    <title></title>
    <link rel="stylesheet" type="text/css" href="combined_files/css/styles.css">
+    <link id="dynamic-favicon" rel="shortcut icon" href="assets/img/opensign.gif">
+    <link rel="apple-touch-icon" href="assets/img/icon57.png" sizes="57x57">
+    <link rel="apple-touch-icon-precomposed" href="assets/img/icon144.png" sizes="114x114">
 </head>
 <body>
    <div class="page">
