Added start of js data

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
          </div>
       </div>
    </div>
+   <script type="text/javascript" src="combined_files/js/script.js"></script>
 </body>
 </html>
