Added valid time staleness display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <div class="banner">
             <h1 id="jsMessage">Unknown</h1>
             <p>Last change: <span id="jsUpdate">unknown</span></p>
-            <p>Valid: <span id="jsPing">unknown</span></p>
+            <p id="jsPingStaleIndicator">Valid: <span id="jsPing">unknown</span></p>
             <a class="alertbutton" id="jsAlert">
                <span class="icon-alert"></span> <span class="request">Alert when available</span>
                <span class="willnotify">You'll be notified</span>
