--- a/stats.html
+++ b/stats.html
@@ -18,6 +18,12 @@
             <li>Average of <span id="js_avgTime">?</span> min</li>
          </ul>
       </div>
+      <h2>Time used per hour</h2>
+      <canvas id="js_hourly"></canvas>
+      <h2>Amount of hour used</h2>
+      <canvas id="js_hourlyAmount"></canvas>
+      <h2>Day Popularity (range of 0-10)</h2>
+      <canvas id="js_popularity"></canvas>
    </div>
    <script type="text/javascript" src="combined_files/js/stats.js"></script>
 </body>
