--- a/stats.html
+++ b/stats.html
@@ -16,6 +16,8 @@
             <li><span id="js_hoursUsed">?</span> hours used</li>
             <li><span id="js_timeUsed">?</span> times used</li>
             <li>Average of <span id="js_avgTime">?</span> min</li>
+            <li>Average times per day <span id="js_avgPerDay">?</span></li>
+            <li>Average times per hour <span id="js_avgPerHour">?</span></li>
          </ul>
       </div>
       <h2>Time used per hour</h2>
