--- a/stats.html
+++ b/stats.html
@@ -3,9 +3,9 @@
 <head>
    <title></title>
    <link rel="stylesheet" type="text/css" href="combined_files/css/styles.css">
-    <link id="dynamic-favicon" rel="shortcut icon" href="assets/img/opensign.gif">
-    <link rel="apple-touch-icon" href="assets/img/icon57.png" sizes="57x57">
-    <link rel="apple-touch-icon-precomposed" href="assets/img/icon144.png" sizes="114x114">
+   <link id="dynamic-favicon" rel="shortcut icon" href="assets/img/opensign.gif">
+   <link rel="apple-touch-icon" href="assets/img/icon57.png" sizes="57x57">
+   <link rel="apple-touch-icon-precomposed" href="assets/img/icon144.png" sizes="114x114">
 </head>
 <body>
    <div class="page">
@@ -20,9 +20,9 @@
             <li>Average times per hour <span id="js_avgPerHour">?</span></li>
          </ul>
       </div>
-      <h2>Time used per hour</h2>
+      <h2>Number of times used per hour</h2>
       <canvas id="js_hourly"></canvas>
-      <h2>Amount of hour used</h2>
+      <h2>Percentage of hour used</h2>
       <canvas id="js_hourlyAmount"></canvas>
       <h2>Day Popularity (range of 0-10)</h2>
       <canvas id="js_popularity"></canvas>
