--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="assets/img/icon57.png" sizes="57x57">
     <link rel="apple-touch-icon-precomposed" href="assets/img/icon144.png" sizes="114x114">
 </head>
-<body>
+<body class="app">
    <div class="page">
       <div class="status" id="jsStatus">
          <span class="icon-restroomsign sign"></span>
@@ -22,6 +22,9 @@
          </div>
       </div>
    </div>
+   <footer>
+      <a href="stats.html">See Statistics</a>
+   </footer>   
    <script type="text/javascript" src="combined_files/js/script.js"></script>
 </body>
 </html>
